Responsive done for tablet and mobile

--- a/index.html
+++ b/index.html
@@ -103,54 +103,54 @@
               </p>
             </div>
             <div class="card-item">
-              <img src="images/camera.png" alt="" />
-              <h3>Camera</h3>
-              <h4>$100.48</h4>
+              <img src="images/drone.png" alt="" />
+              <h3>Drone</h3>
+              <h4>$1000.48</h4>
               <p>
                 Wordwide shifting available <br />
                 Buyers protection possible!
               </p>
             </div>
             <div class="card-item">
-              <img src="images/camera.png" alt="" />
-              <h3>Camera</h3>
-              <h4>$100.48</h4>
+              <img src="images/gear.png" alt="" />
+              <h3>Gear</h3>
+              <h4>$54.48</h4>
               <p>
                 Wordwide shifting available <br />
                 Buyers protection possible!
               </p>
             </div>
             <div class="card-item">
-              <img src="images/camera.png" alt="" />
-              <h3>Camera</h3>
-              <h4>$100.48</h4>
+              <img src="images/lights.png" alt="" />
+              <h3>Lights</h3>
+              <h4>$15</h4>
               <p>
                 Wordwide shifting available <br />
                 Buyers protection possible!
               </p>
             </div>
             <div class="card-item">
-              <img src="images/camera.png" alt="" />
-              <h3>Camera</h3>
-              <h4>$100.48</h4>
+              <img src="images/mic.png" alt="" />
+              <h3>Mic</h3>
+              <h4>$4.50</h4>
               <p>
                 Wordwide shifting available <br />
                 Buyers protection possible!
               </p>
             </div>
             <div class="card-item">
-              <img src="images/camera.png" alt="" />
-              <h3>Camera</h3>
-              <h4>$100.48</h4>
+              <img src="images/setup.png" alt="" />
+              <h3>Setup</h3>
+              <h4>$150.48</h4>
               <p>
                 Wordwide shifting available <br />
                 Buyers protection possible!
               </p>
             </div>
             <div class="card-item">
-              <img src="images/camera.png" alt="" />
-              <h3>Camera</h3>
-              <h4>$100.48</h4>
+              <img src="images/tripod.png" alt="" />
+              <h3>Tripod</h3>
+              <h4>$10.58</h4>
               <p>
                 Wordwide shifting available <br />
                 Buyers protection possible!
